src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
